# pHfit

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  question.yaml
.github/workflows/: publish.yml  release.yml  test.yml
docker/: Dockerfile
example/: phrodo_sample.tsv  phrodo_standard_curve.tsv  sample.tsv  standard_curve.tsv
example/output/: estimated_pH.tsv  estimated_pH_all.tsv  fit_params.tsv  report.html
example/phrodo_output/: estimated_pH.tsv  estimated_pH_all.tsv  fit_params.tsv  report.html
scripts/: generate_example_data.py  generate_readme_figure.py
src/phfit/: __init__.py  __main__.py  cli.py  io.py  models.py  plot.py  presets.py  report.py
tests/: test_cli.py  test_coverage.py  test_models.py
