[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pHfit"
version = "0.1.0"
description = "Estimate lysosomal pH from fluorescent indicator data using sigmoid curve fitting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9,<3.15"
authors = [
    { name = "Naoto Kubota" },
]
keywords = ["pH", "lysosome", "fluorescence", "sigmoid", "curve-fitting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "pandas>=1.3",
    "plotly>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
phfit = "phfit.cli:main"

[project.urls]
Homepage = "https://github.com/NaotoKubota/pHfit"
Repository = "https://github.com/NaotoKubota/pHfit"
Issues = "https://github.com/NaotoKubota/pHfit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/phfit"]
