[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pHfit"
version = "1.0.0"
description = "Estimate intracellular pH from fluorescent indicator data using bidirectional sigmoid curve fitting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.15"
authors = [
    { name = "Naoto Kubota" },
    { name = "Sika Zheng" },
]
keywords = ["pH", "lysosome", "fluorescence", "sigmoid", "curve-fitting"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "pandas>=1.3",
    "plotly>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
phfit = "phfit.cli:main"

[project.urls]
Homepage = "https://github.com/Sika-Zheng-Lab/pHfit"
Repository = "https://github.com/Sika-Zheng-Lab/pHfit"
Issues = "https://github.com/Sika-Zheng-Lab/pHfit/issues"
Changelog = "https://github.com/Sika-Zheng-Lab/pHfit/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/phfit"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "example/standard_curve.tsv",
    "example/sample.tsv",
    "example/phrodo_standard_curve.tsv",
    "example/phrodo_sample.tsv",
    "img/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CITATION.cff",
    "pyproject.toml",
]
exclude = [
    "example/output/",
    "example/phrodo_output/",
]
